# libra

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
data/: databases.json
data/tthresh_tacc_turb.cdb/: data.csv
data/tthresh_tacc_turb_40.cdb/: data.csv
data/tthresh_tacc_turb_40.cdb/compressed_tthresh/: processed_images.csv
libra/: main.py
libra/eval/: analysis_opacity.py  compress_tthresh.py  compression_info.csv  eval.ipynb  output.csv  test.ipynb  turbulence.py  turbulence_state.pvsm  vary_camera_pos.py
libra/examples/configs/: test1_config.json  test2_config.json  test3_config.json  test4_config.json  test5_config.json
libra/examples/output/test4_output/: metrics.csv
libra/test/: test_image_diff.py
libra/utils/: image_difference.py  map_computation.py  metrics.py
samples/: example.ipynb  sample_input.json  sample_input_all.json
samples/data/test2/: nyx_image.pvsm  save_nyx_image.py
src/: app.py  main.py
src/libra/: __init__.py  compute_metrics.py  image_difference.py  map_computation.py  metrics.py  utils.py
src/llibra/: main.py
src/llibra/utils/: __init__.py  compute_metrics.py  image_difference.py  map_computation.py  metrics.py  utils.py
src/utils/: __init__.py  image_difference.py  image_preprocess.py  map_computation.py
testing/: test.json
tests/: sample.json  test.py  test1.py  test_map_comp.py
tests/examples/configs/: test1_config.json  test4_config.json  test5_config.json
tests/examples/output/test1_output/: metrics.csv
workspace/: comp_data.csv  scatter_plot.ipynb
(+1 files in other folders)
