[project]
name = "libra"
version = "0.1"
authors = [
  { name="Yanni Etchi", email="yannietchi@gmail.com" },
  { name="Pascal Grosset", email="pascalgrosset@lanl.gov" },
]
description = "Compare images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3 license",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lanl/libra"

